# agh-distributed-systems

lab1/homework/Client/: build.gradle
lab1/homework/Server/: build.gradle
lab1/lab/: JavaTcpClient.java  JavaUdpClient.java  JavaUdpServer.java  JavaUdpServerNumbers.java  PythonUdpClient.py  PythonUdpClientNumbers.py  PythonUdpServer.py
lab2/homework/: .dockerignore  Dockerfile  deployment.yml  docker-compose.yml  insert_test_user.py  lab2hw.postman_collection.json  main.py  requirements.txt
lab2/homework/depends/: auth.py  db.py
lab2/homework/routers/: api.py  auth.py
lab2/homework/templates/: forecast.html  root.html
lab2/lab/: requirements.txt  vote.py
lab3/: notes  ray-lab-1-task.py  ray-lab-2-objects.py  ray-lab-3-actors.py  requirements.txt
lab3/compose/: docker-compose.yaml
lab3/kube/: cluster_values.yaml  port_forward  setup
lab4/homework/A1/server/: Cargo.toml  build.rs
lab4/homework/A1/server/proto/: smarthome.proto
lab4/homework/A1/server/src/: bulb.rs  main.rs  sensor.rs  service.rs  smarthome.rs
lab4/homework/I4/: GRPC.md  ICE.md  README  compile_interfaces.sh  example.ice  example.proto  grpc.pcapng  ice.pcapng
lab4/lab/Thrift/: calculator.thrift
lab4/lab/gRPC/: cmds.sh  person.proto  person2.ser
lab5/homework/: schema.gv  schema_2.gv
lab5/homework/delivery_service/: build.gradle  settings.gradle
lab5/homework/space_agency/: build.gradle  settings.gradle
lab5/lab/rabbitmq-sr-lab5/: compose.yaml
lab6/lab/: source.txt
lab6/lab/conf1/: zoo.cfg
lab6/lab/conf2/: zoo.cfg
lab6/lab/conf3/: zoo.cfg
(+80 files in other folders)
