[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3.28"
tokio-stream = "0.1.14"
structopt = "0.3.26"
rand = "0.8.5"
log = { version = "0.4.17", features = ["std"] }
rand_distr = "0.4.3"
pretty_env_logger = "0.4.0"
tonic-reflection = "0.9.2"


[build-dependencies]
tonic-build = "0.9.2"
